tests/golden/type_errors/map_keys_non_map.err
Type error at 1:7: keys expects map as first argument, got number
  keys(1);
        ^
